Update .gitignore files for Python agent and summarizer to include additional dependencies and temporary files, improving project cleanliness.

--- a/summarizer/.gitignore
+++ b/summarizer/.gitignore
@@ -1,24 +1,70 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
+# Dependencies
+node_modules/
+package-lock.json
+yarn.lock
+pnpm-lock.yaml
+pip-log.txt
+pip-delete-this-directory.txt
+Pipfile.lock
+poetry.lock
+__pycache__/
+*.egg-info/
+dist/
+build/
 
-node_modules
-dist
-dist-ssr
-*.local
+# Environment variables
+.env
+.env.local
+.env.*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
+# IDE & Editor
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
 .DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+.sublime-project
+.sublime-workspace
+*.iml
+
+# OS
+.DS_Store
+Thumbs.db
+*.log
+
+# Temporary files
+*.tmp
+*.temp
+*.bak
+*.cache
+
+# Testing
+.pytest_cache/
+.coverage
+.nyc_output/
+coverage/
+htmlcov/
+
+# Build outputs
+dist/
+build/
+*.o
+*.so
+*.dylib
+
+# Database
+*.sqlite
+*.sqlite3
+*.db
+
+# Compiled files
+*.pyc
+*.pyo
+*.class
+*.jar
+
+# Misc
+.cache/
+*.pid
+*.seed
