Add project scripts section to pyproject.toml, defining entry point for the application to facilitate execution and improve project structure.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -76,5 +76,8 @@ dependencies = [
   "google-generativeai==0.8.3",
 ]
 
+[project.scripts]
+app = "app:app"
+
 [project.optional-dependencies]
 dev = []
