--- a/python_gpt_agent/pyproject.toml
+++ b/python_gpt_agent/pyproject.toml
@@ -73,6 +73,7 @@ dependencies = [
   "fastapi==0.115.6",
   "uvicorn[standard]==0.34.0",
   "google-generativeai==0.8.3",
+  "agentbasis",
 ]
 
 [project.scripts]
